--- a/bank/src/main/resources/templates/fragments/header.html
+++ b/bank/src/main/resources/templates/fragments/header.html
@@ -123,24 +123,25 @@
                   </div>
                 </li>
                 <li>
-                  <a href="/mymain">마이페이지</a>
+                  <a href="mymain.html">마이페이지</a>
                   <div class="menu-1__sub-menu">
                     <div class="con">
                       <ul class="flex">
                         <li class="flex-1">
-                          <a href="/myinfo">나의정보변경</a>
+                          <a href="myinfo.html">나의정보변경</a>
                           <ul>
-                            <li><a href="/myChgPwd">비밀번호변경</a></li>
+                          
+                            <li><a href="????">비밀번호변경</a></li>
                           </ul>
                           </li>
                           <li class="flex-1">
-                          <a href="/mydate">금융일정관리</a>
+                          <a href="mydate.html">금융일정관리</a>
                           </li>
                           <li class="flex-1">
-                          <a href="/membership">나의우대등급</a>
+                          <a href="mymbership.html">나의우대등급</a>
                           </li>
                           <li class="flex-1">
-                          <a href="/myvisited">최근접속이력</a>
+                          <a href="myvisited.html">최근접속이력</a>
                     
                         </li>
                       </ul>
