--- a/bank/src/main/resources/templates/fragments/header.html
+++ b/bank/src/main/resources/templates/fragments/header.html
@@ -109,8 +109,8 @@
                           <li class="flex-1">
                           <a href="consult.html">상담</a>
                           <ul>
-                            <li><a href="mailconsult.html">이메일상담</a></li>
-                            <li><a href="chatconsult.html">챗봇상담</a></li>
+                            <li><a th:href="@{mailconsult}">이메일상담</a></li>
+                            <li><a th:href="@{chatconsult}">챗봇상담</a></li>
                           </ul>
                           </li>
                           <li class="flex-1">
