--- a/bank/src/main/resources/templates/html.login/login.html
+++ b/bank/src/main/resources/templates/html.login/login.html
@@ -13,7 +13,7 @@
 <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
 <script>
 Kakao.init('be2f3e458c1bb1a568c295380fa8a2c4'); //발급받은 키 중 javascript키를 사용해준다.
-console.log(Kakao.isInitialized()); // sdk초기화여부판단
+console.log(Kakao.isInitialized()); // sdk초기화여부판단시작해본다
 //카카오로그인
 function kakaoLogin() {
     Kakao.Auth.login({
